Add initial HTML body and bootstrap CSS

--- a/index.html
+++ b/index.html
@@ -1,11 +1,183 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Steven Jarmell</title>
-</head>
-<body>
-    <h1>Kenny Pickett Supabowl</h1>
-</body>
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <link rel="stylesheet" href="styles.css" />
+        <title>Kenny Pickett | QB1</title>
+    </head>
+    <body>
+        <main>
+            <!-- Header -->
+            <header>
+                <nav class="nav-container">
+                    <span><a href="#home">KP8</a></span>
+                    <ul class="nav-container__links">
+                        <li><a href="#home">Home</a></li>
+                        <li><a href="#about">About</a></li>
+                        <li><a href="#experience">Experience</a></li>
+                        <li><a href="#portfolio">Portfolio</a></li>
+                        <li><a href="#contact">Contact</a></li>
+                        <li><a href="https://en.wikipedia.org/wiki/Kenny_Pickett" target="_blank">Resume</a></li>
+                    </ul>
+                </nav>
+            </header>
+
+            <section id="home" class="section-container">
+                <!-- Intro  -->
+                <div>
+                    <span>HELLO, MY NAME IS</span>
+                    <div>
+                        <span>Kenny Pickett</span>
+                        <span>Let's Ball.</span>
+                    </div>
+                    <div>
+                        <div>
+                            <img src="assets/email-logo.webp" class="home-icon"/>
+                            <span>KP8@pitt.edu</span>
+                        </div>
+                        <div>
+                            <img src="assets/phone-logo.png" class="home-icon"/>
+                            <span>412-100-0101</span>
+                        </div>
+                    </div>
+                </div>
+            </section>
+
+            <!-- About Me  -->
+            <section id="about" class="section-container">
+                <span>About me</span>
+                <div>
+                    <p>
+                        I am recent alumni from the University of Pittsburgh
+                        where I led the Pittsburgh Panthers to an ACC
+                        Championship, was named first-team All-American, broke
+                        multiple school records, and was a finalist for the
+                        Heisman Trophy.
+                    </p>
+                </div>
+                <div>
+                    <p>
+                        I bring a strong sense of leadership and a relentless
+                        work ethic to the field and any pursuit I embark on.
+                        Whether it's rallying my team in the final moments of a
+                        high-stakes game or setting an example through my
+                        dedication to training and improvement, I strive to
+                        inspire and elevate those around me.
+                    </p>
+                </div>
+            </section>
+
+            <!-- Experience  -->
+            <section id="experience" class="section-container">
+                <div>
+                    <span>Skills</span>
+                    <!-- Technical Skills -->
+                    <div>
+                        <span>Technical</span>
+                        <ul>
+                            <li>C++</li>
+                            <li>Rust</li>
+                            <li>Python</li>
+                            <li>Brainfuck</li>
+                        </ul>
+                    </div>
+
+                    <!-- Soft Skills -->
+                    <div>
+                        <span>Soft</span>
+                        <ul>
+                            <li>Leadership</li>
+                            <li>Work Ethic</li>
+                            <li>Decision-Making</li>
+                            <li>Football IQ</li>
+                        </ul>
+                    </div>
+                </div>
+
+                <!-- Jobs -->
+                <div>
+                    <span>Work Experience</span>
+                    <div>
+                        <span>QB1</span>
+                        <span>Pittsburgh Steelers</span>
+                        <p>
+                            As the Starting Quarterback for the Pittsburgh
+                            Steelers, I was responsible for leading the team's
+                            offense, demonstrating strong leadership skills both
+                            on and off the field.
+                        </p>
+                    </div>
+                    <div>
+                        <span>Software Engineering Intern</span>
+                        <span>Nvidia</span>
+                        <p>
+                            At Nvidia, I contributed to cutting-edge
+                            developments in self-driving AI technology,
+                            leveraging expertise in machine learning and
+                            computer vision to advance autonomous vehicle
+                            capabilities and enhance safety on the road.
+                            Collaborated with cross-functional teams to design
+                            and implement innovative solutions, demonstrating a
+                            commitment to pushing the boundaries of AI in the
+                            automotive industry.
+                        </p>
+                    </div>
+                </div>
+            </section>
+
+            <!-- Portfolio -->
+            <section id="portfolio" class="section-container">
+                <span>Some of my favorite projects</span>
+                <div>
+                    <span>Football Game Outcome Predictor</span>
+                    <p>
+                        Utilized C++ to build a machine learning model that
+                        predicts the outcome of football games (e.g., win, lose,
+                        or draw) based on historical game data, including team
+                        statistics, player performance, and other relevant
+                        factors. Correctly predicted 78.9% of season games
+                        between 2021 and 2022
+                    </p>
+                </div>
+                <div>
+                    <span>AI Fantasy Football Manager</span>
+                    <p>
+                        I developed an AI-driven application in Rust that
+                        automatically manages my fantasy football team by making
+                        player selection, lineup changes, and trade decisions
+                        based on machine learning models trained on historical
+                        data and real-time player statistics.
+                    </p>
+                </div>
+                <div>
+                    <span>Quarterback Form Analyzer</span>
+                    <p>
+                        I created a program in Python using OpenCV and machine
+                        learning techniques to analyze a quarterback's throwing
+                        form captured in video footage. The program detects
+                        flaws in the form and provide feedback on areas of
+                        improvement.
+                    </p>
+                </div>
+            </section>
+            <section id="contact" class="section-container">
+                <div>
+                    <span>Connect with Me</span>
+                    <div>
+                        <ul>
+                            <li>Resume</li>
+                            <li>GitHub</li>
+                            <li>LinkedIn</li>
+                            <li>Instagram</li>
+                            <li>Twitter</li>
+                        </ul>
+                    </div>
+                </div>
+            </section>
+            <footer id="footer">
+                <div>Made with ❤️</div>
+            </footer>
+        </main>
+    </body>
 </html>
