--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
             <section id="home" class="section-container">
                 <div class="home__container">
-                    <div>
+                    <div class="home__name-info-container">
                         <div class="home__name-container">
                             <span class="home__name">Kenny Pickett</span>
                             <span class="home__mission-statement"
@@ -64,6 +64,7 @@
                             </div>
                         </div>
                     </div>
+
                     <img
                         src="./assets/KP.jpg"
                         class="home__kp-picture"
