Style about section

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 </nav>
             </header>
 
-            <section id="home" class="section-container">
+            <section id="home" class="home-section-container section-container">
                 <div class="home__container">
                     <div class="home__name-info-container">
                         <div class="home__name-container">
@@ -74,18 +74,16 @@
             </section>
 
             <section id="about" class="section-container">
-                <span>About me</span>
-                <div>
-                    <p>
-                        I am recent alumni from the University of Pittsburgh
-                        where I led the Pittsburgh Panthers to an ACC
-                        Championship, was named first-team All-American, broke
-                        multiple school records, and was a finalist for the
-                        Heisman Trophy.
+                <div class="about-container">
+                    <span class="section__title">About me</span>
+                    <p class="about__text">
+                        I am recent alumni from the <span class="about__text-pitt">University of Pittsburgh</span>
+                        where I led the Pittsburgh Panthers to an <b>ACC
+                        Championship</b>, was named <b>first-team All-American</b>, broke
+                        <em>multiple</em> school records, and was a <em>finalist</em> for the
+                        <b>Heisman Trophy</b>.
                     </p>
-                </div>
-                <div>
-                    <p>
+                    <p class="about__text">
                         I bring a strong sense of leadership and a relentless
                         work ethic to the field and any pursuit I embark on.
                         Whether it's rallying my team in the final moments of a
@@ -98,7 +96,7 @@
 
             <section id="experience" class="section-container">
                 <div>
-                    <span>Skills</span>
+                    <span class="section__title">Skills</span>
                     <!-- Technical Skills -->
                     <div>
                         <span>Technical</span>
@@ -124,7 +122,7 @@
 
                 <!-- Jobs -->
                 <div>
-                    <span>Work Experience</span>
+                    <span class="section__title">Work Experience</span>
                     <div>
                         <span>QB1</span>
                         <span>Pittsburgh Steelers</span>
@@ -154,7 +152,7 @@
             </section>
 
             <section id="portfolio" class="section-container">
-                <span>Some of my favorite projects</span>
+                <span class="section__title">Some of my favorite projects</span>
                 <div>
                     <span>Football Game Outcome Predictor</span>
                     <p>
@@ -190,7 +188,7 @@
 
             <section id="contact" class="section-container">
                 <div>
-                    <span>Connect with Me</span>
+                    <span class="section__title">Connect with Me</span>
                     <div>
                         <ul>
                             <li>Resume</li>
