--- a/index.html
+++ b/index.html
@@ -14,10 +14,21 @@
                 <nav class="nav-container">
                     <span><a href="#home">KP8</a></span>
                     <ul class="nav-container__links">
-                        <li><a href="#home">Home</a></li>
-                        <li><a href="#about">About</a></li>
-                        <li><a href="#experience">Experience</a></li>
-                        <li><a href="#portfolio">Portfolio</a></li>
+                        <li>
+                            <a href="#about" class="nav-container__link"
+                                >About</a
+                            >
+                        </li>
+                        <li>
+                            <a href="#experience" class="nav-container__link"
+                                >Experience</a
+                            >
+                        </li>
+                        <li>
+                            <a href="#portfolio" class="nav-container__link"
+                                >Portfolio</a
+                            >
+                        </li>
                         <a
                             href="mailto: kp8@pitt.edu"
                             target="_blank"
@@ -77,11 +88,15 @@
                 <div class="about-container">
                     <span class="section__title">About me</span>
                     <p class="about__text">
-                        I am recent alumni from the <span class="about__text-pitt">University of Pittsburgh</span>
-                        where I led the Pittsburgh Panthers to an <b>ACC
-                        Championship</b>, was named <b>first-team All-American</b>, broke
-                        <em>multiple</em> school records, and was a <em>finalist</em> for the
-                        <b>Heisman Trophy</b>.
+                        I am recent alumni from the
+                        <span class="about__text-pitt"
+                            >University of Pittsburgh</span
+                        >
+                        where I led the Pittsburgh Panthers to an
+                        <b>ACC Championship</b>, was named
+                        <b>first-team All-American</b>, broke
+                        <em>multiple</em> school records, and was a
+                        <em>finalist</em> for the <b>Heisman Trophy</b>.
                     </p>
                     <p class="about__text">
                         I bring a strong sense of leadership and a relentless
@@ -95,94 +110,157 @@
             </section>
 
             <section id="experience" class="section-container">
-                <div>
-                    <span class="section__title">Skills</span>
-                    <!-- Technical Skills -->
-                    <div>
-                        <span>Technical</span>
-                        <ul>
-                            <li>C++</li>
-                            <li>Rust</li>
-                            <li>Python</li>
-                            <li>Brainfuck</li>
-                        </ul>
+                <div class="experience-container">
+                    <div class="experience__skills-container">
+                        <span class="section__title">Skills</span>
+                        <!-- Technical Skills -->
+                        <div>
+                            <span class="experience__skills-section-subtitle"
+                                >Technical</span
+                            >
+                            <ul class="experience__skills-items-container">
+                                <li>C++</li>
+                                <li>Rust</li>
+                                <li>Python</li>
+                                <li>Brainfuck</li>
+                            </ul>
+                        </div>
+
+                        <!-- Soft Skills -->
+                        <div>
+                            <span class="experience__skills-section-subtitle"
+                                >Soft</span
+                            >
+                            <ul class="experience__skills-items-container">
+                                <li>Leadership</li>
+                                <li>Work Ethic</li>
+                                <li>Decision-Making</li>
+                                <li>Football IQ</li>
+                            </ul>
+                        </div>
                     </div>
 
-                    <!-- Soft Skills -->
-                    <div>
-                        <span>Soft</span>
-                        <ul>
-                            <li>Leadership</li>
-                            <li>Work Ethic</li>
-                            <li>Decision-Making</li>
-                            <li>Football IQ</li>
-                        </ul>
-                    </div>
-                </div>
-
-                <!-- Jobs -->
-                <div>
-                    <span class="section__title">Work Experience</span>
-                    <div>
-                        <span>QB1</span>
-                        <span>Pittsburgh Steelers</span>
-                        <p>
-                            As the Starting Quarterback for the Pittsburgh
-                            Steelers, I was responsible for leading the team's
-                            offense, demonstrating strong leadership skills both
-                            on and off the field.
-                        </p>
-                    </div>
-                    <div>
-                        <span>Software Engineering Intern</span>
-                        <span>Nvidia</span>
-                        <p>
-                            At Nvidia, I contributed to cutting-edge
-                            developments in self-driving AI technology,
-                            leveraging expertise in machine learning and
-                            computer vision to advance autonomous vehicle
-                            capabilities and enhance safety on the road.
-                            Collaborated with cross-functional teams to design
-                            and implement innovative solutions, demonstrating a
-                            commitment to pushing the boundaries of AI in the
-                            automotive industry.
-                        </p>
+                    <!-- Jobs -->
+                    <div class="experience__experience-container">
+                        <span class="section__title">Work Experience</span>
+                        <div class="experience__job-container">
+                            <span class="experience__job-title"
+                                >QB1 |
+                                <span class="experience__job-company"
+                                    >Pittsburgh Steelers</span
+                                ></span
+                            >
+                            <p class="experience__job-description">
+                                As the <em>Starting Quarterback</em> for the
+                                Pittsburgh Steelers, I was responsible for
+                                leading the team's offense, demonstrating strong
+                                leadership skills both on and off the field.
+                            </p>
+                        </div>
+                        <div class="experience__job-container">
+                            <span class="experience__job-title"
+                                >Software Engineering Intern |
+                                <span class="experience__job-company"
+                                    >Nvidia</span
+                                ></span
+                            >
+                            <p class="experience__job-description">
+                                At Nvidia, I contributed to cutting-edge
+                                developments in
+                                <b>self-driving AI technology</b>, leveraging
+                                expertise in <b>machine learning</b> and
+                                <b>computer vision</b> to advance autonomous
+                                vehicle capabilities and enhance safety on the
+                                road. Collaborated with cross-functional teams
+                                to <b>design</b> and <b>implemen</b>t innovative
+                                solutions, demonstrating a commitment to pushing
+                                the boundaries of AI in the automotive industry.
+                            </p>
+                        </div>
                     </div>
                 </div>
             </section>
 
             <section id="portfolio" class="section-container">
-                <span class="section__title">Some of my favorite projects</span>
-                <div>
-                    <span>Football Game Outcome Predictor</span>
-                    <p>
-                        Utilized C++ to build a machine learning model that
-                        predicts the outcome of football games (e.g., win, lose,
-                        or draw) based on historical game data, including team
-                        statistics, player performance, and other relevant
-                        factors. Correctly predicted 78.9% of season games
-                        between 2021 and 2022
-                    </p>
-                </div>
-                <div>
-                    <span>AI Fantasy Football Manager</span>
-                    <p>
-                        I developed an AI-driven application in Rust that
-                        automatically manages my fantasy football team by making
-                        player selection, lineup changes, and trade decisions
-                        based on machine learning models trained on historical
-                        data and real-time player statistics.
-                    </p>
-                </div>
-                <div>
-                    <span>Quarterback Form Analyzer</span>
-                    <p>
-                        I created a program in Python using OpenCV and machine
-                        learning techniques to analyze a quarterback's throwing
-                        form captured in video footage. The program detects
-                        flaws in the form and provide feedback on areas of
-                        improvement.
-                    </p>
+                <div class="portfolio-container">
+                    <span class="section__title"
+                        >Some of my favorite projects</span
+                    >
+                    <div class="portfolio__project">
+                        <a
+                            class="portfolio__project-header"
+                            href="https://www.youtube.com/watch?v=dQw4w9WgXcQ&themeRefresh=1"
+                            target="_blank"
+                        >
+                            <img
+                                class="external-link-icon"
+                                src="./assets/external-link.png"
+                                alt="external link icon"
+                            />
+                            <span class="portfolio__project-title"
+                                >Football Game Outcome Predictor</span
+                            >
+                        </a>
+                        <p class="portfolio__project-description">
+                            Utilized <b>C++</b> to build a
+                            <b>machine learning</b> model that predicts the
+                            outcome of football games (e.g., win, lose, or draw)
+                            based on historical game data, including team
+                            statistics, player performance, and other relevant
+                            factors.
+                            <b
+                                >Correctly predicted 78.9% of season games
+                                between 2021 and 2022.</b
+                            >
+                        </p>
+                    </div>
+                    <div class="portfolio__project">
+                        <a
+                            class="portfolio__project-header"
+                            href="https://www.youtube.com/watch?v=dQw4w9WgXcQ&themeRefresh=1"
+                            target="_blank"
+                        >
+                            <img
+                                class="external-link-icon"
+                                src="./assets/external-link.png"
+                                alt="external link icon"
+                            />
+                            <span class="portfolio__project-title"
+                                >AI Fantasy Football Manager</span
+                            >
+                        </a>
+                        <p class="portfolio__project-description">
+                            I developed an <b>AI-driven application</b> in
+                            <b>Rust</b> that automatically manages my fantasy
+                            football team by making player selection, lineup
+                            changes, and trade decisions based on
+                            <b>machine learning</b> models trained on historical
+                            data and real-time player statistics.
+                        </p>
+                    </div>
+                    <div class="portfolio__project">
+                        <a
+                            class="portfolio__project-header"
+                            href="https://www.youtube.com/watch?v=dQw4w9WgXcQ&themeRefresh=1"
+                            target="_blank"
+                        >
+                            <img
+                                class="external-link-icon"
+                                src="./assets/external-link.png"
+                                alt="external link icon"
+                            />
+                            <span class="portfolio__project-title"
+                                >Quarterback Form Analyzer</span
+                            >
+                        </a>
+                        <p class="portfolio__project-description">
+                            I created a program in <b>Python</b> using
+                            <b>OpenCV</b> and <b>machine learning</b> techniques
+                            to analyze a quarterback's throwing form captured in
+                            video footage. The program detects flaws in the form
+                            and provide feedback on areas of improvement.
+                        </p>
+                    </div>
                 </div>
             </section>
 
