Finish and style contact section

--- a/index.html
+++ b/index.html
@@ -265,17 +265,48 @@
             </section>
 
             <section id="contact" class="section-container">
-                <div>
-                    <span class="section__title">Connect with Me</span>
-                    <div>
-                        <ul>
-                            <li>Resume</li>
-                            <li>GitHub</li>
-                            <li>LinkedIn</li>
-                            <li>Instagram</li>
-                            <li>Twitter</li>
-                        </ul>
-                    </div>
+                <div class="contact-container">
+                    <span class="section__title contact-section__title"
+                        >Connect with Me</span
+                    >
+                    <ul class="contact__items-container">
+                        <li>
+                            <a class="contact__item-container" href="https://github.com/Steven-Jarmell" target="_blank"
+                                ><img
+                                    src="./assets/github-logo.webp"
+                                    alt="github logo"
+                                    class="contact__item-logo"
+                                /><span class="contact__item-name">GitHub</span></a
+                            >
+                        </li>
+                        <li>
+                            <a class="contact__item-container" href="https://www.linkedin.com/in/kenny-pickett-248378197/" target="_blank"
+                                ><img
+                                    src="./assets/linkedin-logo.png"
+                                    alt="linkedin logo"
+                                    class="contact__item-logo"
+                                /><span class="contact__item-name">LinkedIn</span></a
+                            >
+                        </li>
+                        <li>
+                            <a class="contact__item-container" href="https://twitter.com/kennypickett10?lang=en" target="_blank"
+                                ><img
+                                    src="./assets/x-logo.jpeg"
+                                    alt="x logo"
+                                    class="contact__item-logo"
+                                /><span class="contact__item-name">X</span></a
+                            >
+                        </li>
+                        <li>
+                            <a class="contact__item-container" href="https://www.instagram.com/kennypickett8/" target="_blank"
+                                ><img
+                                    src="./assets/instagram-logo.png"
+                                    alt="instagram logo"
+                                    class="contact__item-logo"
+                                /><span class="contact__item-name">Instagram</span></a
+                            >
+                        </li>
+                    </ul>
                 </div>
             </section>
 
