Fix bold words in about section

--- a/index.html
+++ b/index.html
@@ -93,18 +93,23 @@
                             >University of Pittsburgh</span
                         >
                         where I led the Pittsburgh Panthers to an
-                        <b>ACC Championship</b>, was named
-                        <b>first-team All-American</b>, broke
-                        <em>multiple</em> school records, and was a
-                        <em>finalist</em> for the <b>Heisman Trophy</b>.
+                        <span class="about__text-bold">ACC Championship</span>,
+                        was named
+                        <span class="about__text-bold"
+                            >first-team All-American</span
+                        >, broke <em>multiple</em> school records, and was a
+                        <em>finalist</em> for the
+                        <span class="about__text-bold">Heisman Trophy</span>.
                     </p>
                     <p class="about__text">
-                        I bring a strong sense of leadership and a relentless
+                        I bring a strong sense of
+                        <span class="about__text-bold">leadership</span> and a
+                        <span class="about__text-bold">relentless</span>
                         work ethic to the field and any pursuit I embark on.
                         Whether it's rallying my team in the final moments of a
                         high-stakes game or setting an example through my
-                        dedication to training and improvement, I strive to
-                        inspire and elevate those around me.
+                        dedication to training and improvement, <span class="about__text-bold">I strive to
+                        inspire and elevate those around me.</span>
                     </p>
                 </div>
             </section>
@@ -271,25 +276,38 @@
                     >
                     <ul class="contact__items-container">
                         <li>
-                            <a class="contact__item-container" href="https://github.com/Steven-Jarmell" target="_blank"
+                            <a
+                                class="contact__item-container"
+                                href="https://github.com/Steven-Jarmell"
+                                target="_blank"
                                 ><img
                                     src="./assets/github-logo.webp"
                                     alt="github logo"
                                     class="contact__item-logo"
-                                /><span class="contact__item-name">GitHub</span></a
+                                /><span class="contact__item-name"
+                                    >GitHub</span
+                                ></a
                             >
                         </li>
                         <li>
-                            <a class="contact__item-container" href="https://www.linkedin.com/in/kenny-pickett-248378197/" target="_blank"
+                            <a
+                                class="contact__item-container"
+                                href="https://www.linkedin.com/in/kenny-pickett-248378197/"
+                                target="_blank"
                                 ><img
                                     src="./assets/linkedin-logo.png"
                                     alt="linkedin logo"
                                     class="contact__item-logo"
-                                /><span class="contact__item-name">LinkedIn</span></a
+                                /><span class="contact__item-name"
+                                    >LinkedIn</span
+                                ></a
                             >
                         </li>
                         <li>
-                            <a class="contact__item-container" href="https://twitter.com/kennypickett10?lang=en" target="_blank"
+                            <a
+                                class="contact__item-container"
+                                href="https://twitter.com/kennypickett10?lang=en"
+                                target="_blank"
                                 ><img
                                     src="./assets/x-logo.jpeg"
                                     alt="x logo"
@@ -298,12 +316,17 @@
                             >
                         </li>
                         <li>
-                            <a class="contact__item-container" href="https://www.instagram.com/kennypickett8/" target="_blank"
+                            <a
+                                class="contact__item-container"
+                                href="https://www.instagram.com/kennypickett8/"
+                                target="_blank"
                                 ><img
                                     src="./assets/instagram-logo.png"
                                     alt="instagram logo"
                                     class="contact__item-logo"
-                                /><span class="contact__item-name">Instagram</span></a
+                                /><span class="contact__item-name"
+                                    >Instagram</span
+                                ></a
                             >
                         </li>
                     </ul>
