Add nav hover animation

--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
             <!-- Header -->
             <header>
                 <nav class="nav-container">
-                    <span><a href="#home">KP8</a></span>
+                    <span
+                        ><a href="#"><b>KP8</b></a></span
+                    >
                     <ul class="nav-container__links">
                         <li>
                             <a href="#about" class="nav-container__link"
@@ -32,13 +34,14 @@
                         <a
                             href="mailto: kp8@pitt.edu"
                             target="_blank"
-                            class="link"
+                            class="link nav-container__link"
                             >Email</a
                         >
                         <li>
                             <a
                                 href="https://en.wikipedia.org/wiki/Kenny_Pickett"
                                 target="_blank"
+                                class="link nav-container__link"
                                 >Resume</a
                             >
                         </li>
@@ -108,8 +111,11 @@
                         work ethic to the field and any pursuit I embark on.
                         Whether it's rallying my team in the final moments of a
                         high-stakes game or setting an example through my
-                        dedication to training and improvement, <span class="about__text-bold">I strive to
-                        inspire and elevate those around me.</span>
+                        dedication to training and improvement,
+                        <span class="about__text-bold"
+                            >I strive to inspire and elevate those around
+                            me.</span
+                        >
                     </p>
                 </div>
             </section>
