Basic media queries

--- a/index.html
+++ b/index.html
@@ -16,32 +16,32 @@
                         ><a href="#"><b>KP8</b></a></span
                     >
                     <ul class="nav-container__links">
-                        <li>
-                            <a href="#about" class="nav-container__link"
+                        <li class="nav-container__link">
+                            <a href="#about"
                                 >About</a
                             >
                         </li>
-                        <li>
-                            <a href="#experience" class="nav-container__link"
+                        <li class="nav-container__link">
+                            <a href="#experience"
                                 >Experience</a
                             >
                         </li>
-                        <li>
-                            <a href="#portfolio" class="nav-container__link"
+                        <li class="nav-container__link">
+                            <a href="#portfolio"
                                 >Portfolio</a
                             >
                         </li>
                         <a
                             href="mailto: kp8@pitt.edu"
                             target="_blank"
-                            class="link nav-container__link"
+                            class="nav-contact-link"
                             >Email</a
                         >
                         <li>
                             <a
                                 href="https://en.wikipedia.org/wiki/Kenny_Pickett"
                                 target="_blank"
-                                class="link nav-container__link"
+                                class="nav-contact-link"
                                 >Resume</a
                             >
                         </li>
