Add first try at media queries for phones

--- a/index.html
+++ b/index.html
@@ -12,24 +12,16 @@
             <!-- Header -->
             <header>
                 <nav class="nav-container">
-                    <span
-                        ><a href="#"><b>KP8</b></a></span
-                    >
+                    <a href="#"><b>KP8</b></a>
                     <ul class="nav-container__links">
                         <li class="nav-container__link">
-                            <a href="#about"
-                                >About</a
-                            >
+                            <a href="#about">About</a>
                         </li>
                         <li class="nav-container__link">
-                            <a href="#experience"
-                                >Experience</a
-                            >
+                            <a href="#experience">Experience</a>
                         </li>
                         <li class="nav-container__link">
-                            <a href="#portfolio"
-                                >Portfolio</a
-                            >
+                            <a href="#portfolio">Portfolio</a>
                         </li>
                         <a
                             href="mailto: kp8@pitt.edu"
@@ -124,30 +116,34 @@
                 <div class="experience-container">
                     <div class="experience__skills-container">
                         <span class="section__title">Skills</span>
-                        <!-- Technical Skills -->
-                        <div>
-                            <span class="experience__skills-section-subtitle"
-                                >Technical</span
-                            >
-                            <ul class="experience__skills-items-container">
-                                <li>C++</li>
-                                <li>Rust</li>
-                                <li>Python</li>
-                                <li>Brainfuck</li>
-                            </ul>
-                        </div>
+                        <div class="section__skills-container">
+                            <!-- Technical Skills -->
+                            <div class="section__skills-technical-container">
+                                <span
+                                    class="experience__skills-section-subtitle"
+                                    >Technical</span
+                                >
+                                <ul class="experience__skills-items-container">
+                                    <li>C++</li>
+                                    <li>Rust</li>
+                                    <li>Python</li>
+                                    <li>Brainfuck</li>
+                                </ul>
+                            </div>
 
-                        <!-- Soft Skills -->
-                        <div>
-                            <span class="experience__skills-section-subtitle"
-                                >Soft</span
-                            >
-                            <ul class="experience__skills-items-container">
-                                <li>Leadership</li>
-                                <li>Work Ethic</li>
-                                <li>Decision-Making</li>
-                                <li>Football IQ</li>
-                            </ul>
+                            <!-- Soft Skills -->
+                            <div class="section__skills-soft-container">
+                                <span
+                                    class="experience__skills-section-subtitle"
+                                    >Soft</span
+                                >
+                                <ul class="experience__skills-items-container">
+                                    <li>Leadership</li>
+                                    <li>Work Ethic</li>
+                                    <li>Decision-Making</li>
+                                    <li>Football IQ</li>
+                                </ul>
+                            </div>
                         </div>
                     </div>
 
