Add hacked KP picture

--- a/index.html
+++ b/index.html
@@ -50,6 +50,11 @@
                                 >Quarterback and Aspiring Software
                                 Engineer</span
                             >
+                            <img
+                                src="./assets/KP.jpg"
+                                class="home__kp-picture-phone"
+                                alt="picture of Kenny Pickett"
+                            />
                         </div>
                         <div class="home__contact-container">
                             <div class="home__contact-resource">
