Fix phone number turning blue

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                                     class="home__icon"
                                     alt="phone icon"
                                 />
-                                <span>412-100-0101</span>
+                                <span class="home__contact-resource-number">412-100-0101</span>
                             </div>
                         </div>
                     </div>
