--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                 <div class="home__container">
                     <div class="home__name-info-container">
                         <div class="home__name-container">
-                            <span class="home__name">Kenny Pickett</span>
+                            <span class="home__name">Test</span>
                             <span class="home__mission-statement"
                                 >Quarterback and Aspiring Software
                                 Engineer</span
